--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,52 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
-description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+#
+## Easiest way to work with this file, from an updated Ubuntu 16.04 LTS image
+## 1.   create a non-root user with sudo priv and perform following steps as non-root
+## 2.  `sudo apt-get update`
+## 3.  `sudo apt-get install snapcraft python build-essential`
+## 4.  `snapcraft stage`
+## 5.  `snapcraft snap`
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+name: i2pd
+version: 2.15.0
+summary: Distributed anonymous networking framework
+description: |
+    i2pd (I2P Daemon) is a full-featured C++ implementation of I2P client.
+    I2P (Invisible Internet Protocol) is a universal anonymous network layer. 
+    All communications over I2P are anonymous and end-to-end encrypted,
+    participants don't reveal their real IP addresses. 
+
+grade: devel
+confinement: strict
+
+apps:
+  i2pd:
+    command: i2pd-wrapper
+    daemon: simple
+    plugs: [network,network-bind]
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  i2pd:
+    source: https://github.com/PurpleI2P/i2pd.git
+    source-type: git
+    source-tag: 2.15.0
+    plugin: make
+    build-packages:
+      - build-essential
+      - libboost-date-time-dev
+      - libboost-filesystem-dev 
+      - libboost-program-options-dev
+      - libboost-system-dev
+      - libssl-dev
+      - zlib1g-dev
+      - libminiupnpc-dev
+    artifacts:
+      - i2pd
+      - contrib/certificates
+      - contrib/i2pd.conf
+    organize:
+      i2pd: bin/
+      contrib/*: .
+  wrapper:
+    plugin: dump
+    source: snap/
+    stage: [i2pd-wrapper]
