Added graceful shutdown and tunnel.conf reload

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,6 +23,10 @@ apps:
     command: i2pd-wrapper
     daemon: simple
     plugs: [network,network-bind]
+  graceful-shutdown:
+    command: kill -2 `cat $SNAP_USER_DATA/.i2pd/i2pd.pid`
+  reload-tunnels-conf:
+    command: kill -1 `cat $SNAP_USER_DATA/.i2pd/i2pd.pid`
 
 parts:
   i2pd:
