--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,7 +7,7 @@
 ## 5.  `snapcraft snap`
 
 name: i2pd
-version: 2.35.0
+version: 2.36.0
 summary: Distributed anonymous networking framework
 description: |
     i2pd (I2P Daemon) is a full-featured C++ implementation of I2P client.
@@ -34,8 +34,7 @@ parts:
   i2pd:
     source: https://github.com/PurpleI2P/i2pd.git
     source-type: git
-    # source-tag: 2.35.0
-    source-commit: ad84944d20c9dd86058f6bdd6c10ea15d0f62425
+    source-tag: 2.36.0
     plugin: make
     make-parameters:
       - USE_UPNP=yes
