--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,15 +18,16 @@ apps:
     daemon: simple
     plugs: [network,network-bind]
   graceful-shutdown:
-    command: kill -2 `cat $SNAP_DATA/datadir/i2pd.pid`
+    command: /bin/kill -2 `cat $SNAP_DATA/datadir/i2pd.pid`
   reload-tunnels-conf:
-    command: kill -1 `cat $SNAP_DATA/datadir/i2pd.pid`
+    command: /bin/kill -1 `cat $SNAP_DATA/datadir/i2pd.pid`
 
 parts:
   i2pd:
     source: https://github.com/PurpleI2P/i2pd.git
     source-type: git
-    source-tag: 2.45.1
+    #source-tag: 2.45.1
+    source-commit: 6ca6591c4365d62873eeac6328e5b1932862a614
     plugin: make
     make-parameters:
       - USE_UPNP=yes
