--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,21 +6,30 @@ description: |
     All communications over I2P are anonymous and end-to-end encrypted,
     participants don't reveal their real IP addresses.
 version: 2.45.1
+
+website: https://i2pd.website/
+source-code: https://github.com/PurpleI2P/i2pd-snap
+issues: https://github.com/PurpleI2P/i2pd/issues
+license: BSD-3-Clause
+
 icon: snap/gui/i2pd.png
 base: core20
 grade: stable
-type: app
 confinement: strict
 
 apps:
   daemon:
     command: i2pd-wrapper
     daemon: simple
-    plugs: [network,network-bind]
+    plugs:
+    - network
+    - network-bind
+
   graceful-shutdown:
-    command: /bin/kill -2 `cat $SNAP_DATA/datadir/i2pd.pid`
+    command: bin/kill -2 `cat $SNAP_DATA/datadir/i2pd.pid`
+
   reload-tunnels-conf:
-    command: /bin/kill -1 `cat $SNAP_DATA/datadir/i2pd.pid`
+    command: bin/kill -1 `cat $SNAP_DATA/datadir/i2pd.pid`
 
 parts:
   i2pd:
@@ -30,25 +39,25 @@ parts:
     source-commit: 6ca6591c4365d62873eeac6328e5b1932862a614
     plugin: make
     make-parameters:
-      - USE_UPNP=yes
-      - DEBUG=no
+    - USE_UPNP=yes
+    - DEBUG=no
     build-packages:
-      - build-essential
-      - libboost-date-time-dev
-      - libboost-filesystem-dev
-      - libboost-program-options-dev
-      - libboost-system-dev
-      - libminiupnpc-dev
-      - libssl-dev
-      - zlib1g-dev
+    - build-essential
+    - libboost-date-time-dev
+    - libboost-filesystem-dev
+    - libboost-program-options-dev
+    - libboost-system-dev
+    - libminiupnpc-dev
+    - libssl-dev
+    - zlib1g-dev
     stage-packages:
-      - libboost-date-time1.71.0
-      - libboost-filesystem1.71.0
-      - libboost-program-options1.71.0
-      - libboost-system1.71.0
-      - libminiupnpc17
-      - libssl1.1
-      - zlib1g
+    - libboost-date-time1.71.0
+    - libboost-filesystem1.71.0
+    - libboost-program-options1.71.0
+    - libboost-system1.71.0
+    - libminiupnpc17
+    - libssl1.1
+    - zlib1g
     organize:
       i2pd: bin/
       contrib/*: .
