[snap] update metadata
Signed-off-by: R4SAS <r4sas@i2pmail.org>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,6 +41,8 @@ parts:
     make-parameters:
     - USE_UPNP=yes
     - DEBUG=no
+    build-attributes:
+    - no-install
     build-packages:
     - build-essential
     - libboost-date-time-dev
