[snap] update metadata
Signed-off-by: R4SAS <r4sas@i2pmail.org>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -47,7 +47,7 @@ parts:
     - libminiupnpc-dev
     - libssl-dev
     - zlib1g-dev
-    build-override: |
+    override-build: |
       make DEBUG=no USE_UPNP=yes -j`nproc`
       mkdir $SNAPCRAFT_PART_INSTALL/appdata
       cp i2pd $SNAPCRAFT_PART_INSTALL/bin
