--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -51,7 +51,7 @@ parts:
       make DEBUG=no USE_UPNP=yes -j`nproc`
       mkdir $SNAPCRAFT_PART_INSTALL/appdata
       cp i2pd $SNAPCRAFT_PART_INSTALL/bin
-      cp -r contrib/i2pd.conf contrib/certificates $SNAPCRAFT_PART_INSTALL/appdata
+      cp -r contrib/i2pd.conf contrib/tunnels.conf contrib/certificates $SNAPCRAFT_PART_INSTALL/appdata
     stage-packages:
     - libboost-date-time1.71.0
     - libboost-filesystem1.71.0
